добавил вёрстку и стили

--- a/Task1/Views/Home/Index.cshtml
+++ b/Task1/Views/Home/Index.cshtml
@@ -1,8 +1,396 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿<html lang="ru">
+<head>
+    <meta charset="utf-8">
+</head>
+<body>
+    <div class="Pizza"><h1>Пиццы</h1></div>
+    <div class="my-flex-container">
+        <div class="item">
+            <img src="~/Images/mama_miya.jpg" class="image">
+            <h2>Мама мия</h2>
+            <h6>Соус "Томатный", Сыр моцарелла, Фарш говяжий, Куриная грудка, Бекон, Лук фри, Пепперони, Соус сырный "Пармеджано", Халапеньо, Соус "Медово-горчичный"</h6>
+            <div class="price">
+                590₽
+            </div>
+        </div>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+        <div class="item">
+            <img src="~/Images/novogodnyaya_1.jpg" class="image">
+            <h2>Новогодняя</h2>
+            <h6>Соус "Гавайский", Сыр моцарелла, Куриная грудка, Мандарины консервированные, Стружка миндаля, Кокосовая стружка"</h6>
+            <div class="price">
+                560₽
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/Images/pestoriya.jpg" class="image">
+            <h2>Пестория</h2>
+            <h6>Соус "Сливочный", Томаты черри, Сыр моцарелла, Сыр фетаки, Куриная грудка, Соус сырный "Пармеджано", Соус "Песто"</h6>
+            <div class="price">
+                570₽
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/Images/tom_yam.jpg" class="image">
+            <h2>Том ям </h2>
+            <h6>Соус "Том ям", Томаты свежие, Шампиньоны, Сыр моцарелла, Лук маринованный, Мидии, Кальмар, Осьминог, Лайм</h6>
+            <div class="price">
+                650₽
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/Images/capriccio_1.jpg" class="image">
+            <h2>Capriccio </h2>
+            <h6>Сыр моцарелла, Соус "Барбекю", Соус "Кальяри", Пепперони, Овощи гриль, Бекон, Ветчина, Томаты черри, Шампиньоны</h6>
+            <div class="price">
+                750₽
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/Images/xxxl_1.jpg" class="image">
+            <h2>XXXL </h2>
+            <h6>Сыр моцарелла, Соус "1000 островов", Куриный рулет, Ветчина, Колбаски охотничьи, Бекон, Сервелат, Огурцы маринованные, Томаты черри, Маслины, Лук маринованный</h6>
+            <div class="price">
+                890₽
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/Images/4_vkusa_1.jpg" class="image">
+            <h2>4 вкуса </h2>
+            <h6>Соус "1000 островов", Сыр моцарелла, Рулет куриный, Ветчина, Пепперони, Сыр пармезан, Шампиньоны, Томаты свежие, Маслины/оливки</h6>
+            <div class="price">
+                540₽
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/Images/amazonka_1.jpg" class="image">
+            <h2>Амазонка </h2>
+            <h6>Соус "Томатный", Сыр моцарелла, Куриная грудка, Брокколи, Огурцы маринованные, Перец болгарский, Шампиньоны, Томаты черри, Маслины, Лук маринованный</h6>
+            <div class="price">
+                560₽
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/Images/barbeq_1.jpg" class="image">
+            <h2>Барбекю </h2>
+            <h6>Соус "Томатный", Сыр моцарелла, Ветчина, Бекон, Пепперони, Соус "Барбекю", Томаты, Перец болгарский, Лук маринованный</h6>
+            <div class="price">
+                540₽
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/Images/hawai_1.jpg" class="image">
+            <h2>Гавайская </h2>
+            <h6>Ветчина, Соус "Гавайский", Сыр моцарелла, Ананас, Перец болгарский</h6>
+            <div class="price">
+                580₽
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/Images/hawai_premium_1.jpg" class="image">
+            <h2>Гавайская Premium </h2>
+            <h6>Соус "Гавайский", Сыр моцарелла, Ананас, Ветчина, Куриный рулет, Кукуруза, Перец болгарский</h6>
+            <div class="price">
+                540₽
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/Images/hawai_premium_1.jpg" class="image">
+            <h2>Гавайская Premium </h2>
+            <h6>Соус "Гавайский", Сыр моцарелла, Ананас, Ветчина, Куриный рулет, Кукуруза, Перец болгарский</h6>
+            <div class="price">
+                560₽
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/Images/grek_1.jpg" class="image">
+            <h2>Греческая </h2>
+            <h6>Соус "Кальяри", Сыр моцарелла, Сливочный сыр, Брокколи, Томаты черри, Перец болгарский, Маслины</h6>
+            <div class="price">
+                570₽
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/Images/grek_1.jpg" class="image">
+            <h2>Грибная </h2>
+            <h6>Соус "Грибной", Сыр моцарелла, Опята маринованные, Укроп, Шампиньоны, Лук маринованный</h6>
+            <div class="price">
+                540₽
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/Images/derevenskaya_1.jpg" class="image">
+            <h2>Деревенская </h2>
+            <h6>Соус "1000 островов", Сыр моцарелла, Ветчина, Сервелат, Огурцы маринованные, Опята маринованные, Укроп, Лук маринованный</h6>
+            <div class="price">
+                550₽
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/Images/domashnyaya_1.jpg" class="image">
+            <h2>Домашняя </h2>
+            <h6>Соус "Томатный", Сыр моцарелла, Ветчина, Сервелат, Томаты, Шампиньоны</h6>
+            <div class="price">
+                560₽
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/Images/don_bekon_1.jpg" class="image">
+            <h2>Домашняя </h2>
+            <h6>Бекон, Соус "Кальяри", Сыр моцарелла, Томаты черри</h6>
+            <div class="price">
+                560₽
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/Images/diabolo_1.jpg" class="image">
+            <h2>Дьябло  </h2>
+            <h6>Соус "Томатный", Сыр моцарелла, Ветчина, Пепперони, Соус "Кимчи", Халапеньо, Томаты</h6>
+            <div class="price">
+                570₽
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/Images/cagliari_1.jpg" class="image">
+            <h2>Кальяри  </h2>
+            <h6>Соус "Кальяри", Креветки тигровые, Куриная грудка, Сыр моцарелла, Ананас, Соус "Унаги", Кунжут</h6>
+            <div class="price">
+                590₽
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/Images/kolizey_1.jpg" class="image">
+            <h2>Колизей</h2>
+            <h6>Соус "Горчичный", Сыр моцарелла, Куриный рулет, Колбаски охотничьи, Соус "Кисло-сладкий", Томаты свежие, Лук маринованный</h6>
+            <div class="price">
+                570₽
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/Images/korolevskaya_1.jpg" class="image">
+            <h2>Королевская </h2>
+            <h6>Соус "Кальяри", Сыр моцарелла, Бекон, Креветки тигровые, Сыр пармезан, Томаты черри</h6>
+            <div class="price">
+                660₽
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/Images/krestyanskaya_1.jpg" class="image">
+            <h2>Крестьянская</h2>
+            <h6>Соус "1000 островов", Сыр моцарелла, Ветчина, Бекон, Укроп, Томаты, Шампиньоны, Лук маринованный</h6>
+            <div class="price">
+                535₽
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/Images/margarita_1.jpg" class="image">
+            <h2>Маргарита</h2>
+            <h6>Соус "Томатный", Сыр моцарелла, Сливочный сыр, Томаты черри</h6>
+            <div class="price">
+                530₽
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/Images/morskaya_1.jpg" class="image">
+            <h2>Морская</h2>
+            <h6>Соус "Кальяри", Сыр моцарелла, Кальмар, Креветки тигровые, Мидии, Осьминог, Лимон, Укроп, Лук маринованный, Маслины</h6>
+            <div class="price">
+                650₽
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/Images/myasnaya_sbornaya_1.jpg" class="image">
+            <h2>Мясная сборная</h2>
+            <h6>Соус "Барбекю", Сыр моцарелла, Куриный рулет, Ветчина, Бекон, Сервелат, Томаты, Перец болгарский, Лук маринованный, Маслины</h6>
+            <div class="price">
+                580₽
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/Images/ostrov_pepperoni_1.jpg" class="image">
+            <h2>Остров пепперони</h2>
+            <h6>Сыр моцарелла x2, Соус "1000 островов", Пепперони, Томаты свежие</h6>
+            <div class="price">
+                560₽
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/Images/ohotnichya_1.jpg" class="image">
+            <h2>Охотничья</h2>
+            <h6>Соус "1000 островов", Сыр моцарелла, Сервелат, Бекон, Колбаски охотничьи, Сливочный сыр, Сыр пармезан, Томаты черри, Лук маринованный, Маслины</h6>
+            <div class="price">
+                580₽
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/Images/peperoni_1.jpg" class="image">
+            <h2>Пепперони</h2>
+            <h6>Соус "Томатный", Сыр моцарелла, Пепперони</h6>
+            <div class="price">
+                510₽
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/Images/pikantnaya_1.jpg" class="image">
+            <h2>Пикантная</h2>
+            <h6>Соус "Кальяри", Ветчина, Сливочный сыр, Сыр моцарелла, Сыр пармезан, Томаты свежие, Перец болгарский</h6>
+            <div class="price">
+                570₽
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/Images/pinokio_1.jpg" class="image">
+            <h2>Пиноккио</h2>
+            <h6>Соус "Гавайский", Куриный рулет, Сыр моцарелла, Кукуруза</h6>
+            <div class="price">
+                530₽
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/Images/cezar_1.jpg" class="image">
+            <h2>Пицца-Cezar </h2>
+            <h6>Ветчина, Куриная грудка, Соус "Кальяри", Сыр моцарелла, Салат айсберг, Сыр пармезан, Соус "Спайси"</h6>
+            <div class="price">
+                570₽
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/Images/burger_1.jpg" class="image">
+            <h2>Пицца-бургер </h2>
+            <h6>Соус "Томатный", Сыр моцарелла, Куриный рулет, Ветчина, Соус "Бургер", Сервелат, Кунжут, Перец болгарский"</h6>
+            <div class="price">
+                560₽
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/Images/sardiniya_1.jpg" class="image">
+            <h2>Сардиния </h2>
+            <h6>Соус "Кальяри", Сыр моцарелла, Брокколи, Сливочный сыр, Креветки тигровые, Томаты черри"</h6>
+            <div class="price">
+                600₽
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/Images/slavyanskaya_1.jpg" class="image">
+            <h2>Славянская</h2>
+            <h6>Соус "1000 островов", Сыр моцарелла, Картофельные дольки, Бекон, Ветчина, Огурцы маринованные, Лук маринованныйX, Зелень, Томаты свежие"</h6>
+            <div class="price">
+                560₽
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/Images/sladkaya_italiya_1.jpg" class="image">
+            <h2>Сладкая Италия</h2>
+            <h6>Соус "Сливочный", Груша консервированная, Сыр моцарелла, Сыр с голубой плесенью, Орехи грецкие, Мёд натуральный"</h6>
+            <div class="price">
+                620₽
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/Images/slivochno_ostraya_1.jpg" class="image">
+            <h2>Сливочно-острая </h2>
+            <h6>Соус "1000 островов", Сыр моцарелла, Сервелат, Бекон, Сливочный сыр, Соус "Кимчи", Халапеньо, Томаты</h6>
+            <div class="price">
+                560₽
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/Images/solanka_1.jpg" class="image">
+            <h2>Солянка</h2>
+            <h6>Соус "Барбекю", Сыр моцарелла, Колбаски охотничьи, Бекон, Сервелат, Огурцы маринованные, Лимон, Укроп, Томаты черри, Лук маринованный, Маслины</h6>
+            <div class="price">
+                600₽
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/Images/cheese_1.jpg" class="image">
+            <h2>Сырная</h2>
+            <h6>Сыр моцарелла, Сливочный сыр, Соус "Кальяри", Сыр фетаки, Сыр с голубой плесенью, Сыр пармезан</h6>
+            <div class="price">
+                620₽
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/Images/tatarskaya.jpg" class="image">
+            <h2>Татарская</h2>
+            <h6>Соус "Томатный", Куриный рулет, Сыр моцарелла, Конно-говяжья колбаса, Лук маринованныйX, Томаты, Шампиньоны, Перец болгарский</h6>
+            <div class="price">
+                600₽
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/Images/fiesta_1.jpg" class="image">
+            <h2>Фиеста</h2>
+            <h6>Соус "1000 островов", Сыр моцарелла, Куриный рулет, Колбаски охотничьи, Сливочный сыр, Сервелат, Опята маринованные, Шампиньоны</h6>
+            <div class="price">
+                580₽
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/Images/filadelf_1.jpg" class="image">
+            <h2>Филадельфия</h2>
+            <h6>Соус "Кальяри", Сыр моцарелла, Лосось, Сливочный сыр, Авокадо</h6>
+            <div class="price">
+                650₽
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/Images/cezar_s_lososem_1.jpg" class="image">
+            <h2>Цезарь с лососем</h2>
+            <h6>Сыр моцарелла, Соус "Кальяри", Томаты свежие, Лосось, Салат айсберг, Соус "Спайси", Сыр пармезан</h6>
+            <div class="price">
+                650₽
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/Images/indi_mandarin_1.jpg" class="image">
+            <h2>Инди-марин</h2>
+            <h6>Соус "Сливочный", Индейка в имбирном соусе, Сыр моцарелла, Мандарины консервированные, Орехи грецкие, Соус "Брусничный"</h6>
+            <div class="price">
+                Временно недоступно
+            </div>
+        </div>
+    </div>
+</body>
+</html>
