Вставил код, оставив пустой div

--- a/Task1/Views/Home/Privacy.cshtml
+++ b/Task1/Views/Home/Privacy.cshtml
@@ -1,6 +1,14 @@
-﻿@{
-    ViewData["Title"] = "Privacy Policy";
-}
-<h1>@ViewData["Title"]</h1>
+﻿<html lang="ru">
+<head>
+    <meta charset="utf-8">
+</head>
+<body>
 
-<p>Use this page to detail your site's privacy policy.</p>
+    <div class="my-flex-container">
+        <div class="item">
+         
+        </div>
+    </div>
+
+</body>
+</html>
