--- a/TestTaskTwo/Views/Home/Privacy.cshtml
+++ b/TestTaskTwo/Views/Home/Privacy.cshtml
@@ -1,6 +1,49 @@
-﻿@{
-    ViewData["Title"] = "Privacy Policy";
-}
-<h1>@ViewData["Title"]</h1>
+﻿@model IEnumerable<TestTaskTwo.Models.PizzaModel>
+<html lang="ru">
+<head>
+    <meta charset="utf-8">
+    <title>Пиццы</title>
 
-<p>Use this page to detail your site's privacy policy.</p>
+</head>
+<body>
+
+    <div class="Pizza"><h1>Пиццы</h1></div>
+    <div class="my-flex-container" id="card">
+        <!-- содержимое плитки -->
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+
+        var url = '@Url.Action("GetPizza", "Home")';
+        var imgBase = '@Url.Content("~/images/")';
+
+        $.getJSON(url)
+
+        //в задании было сказано написать НАЗВАНИЕ картинки, а не путь и я написал как сказано,
+        // получилась путаница в переменных
+        .done(function(pizzas) {
+          for (var i = 0; i < pizzas.length; i++) {
+            var p = pizzas[i];
+            var imageName = p.image || p.Image || '';
+            var imageSrc = (imgBase + imageName);
+            var ingredients = p.ingredients;
+            var name = p.name;
+            var priceHtml = p.price + '₽';
+
+            if (p.price=="Временно недоступно"){
+                var priceHtml = p.price;
+            }
+
+              var html = '<div class="item">'
+                     + '<img src="' + imageSrc + '" class="image"/>'
+                     + '<h2>' + name + '</h2>'
+                     + '<h6>' + ingredients + '</h6>'
+                     + '<div class="price">' + priceHtml + '</div>'
+                     + '</div>';
+                  $('#card').append(html);
+                }
+              })
+    </script>
+</body>
+</html>
