--- a/TestTaskTwo/Views/Home/Detail.cshtml
+++ b/TestTaskTwo/Views/Home/Detail.cshtml
@@ -5,23 +5,21 @@
     <meta charset="utf-8">
 </head>
 <body>
-    <div class="Pizza"><h1>Пиццы</h1></div>
     <div class="my-flex-container">
-       
-            <div class="item">  
-            <img src="@(Url.Content("~/images/" + @Model.Image))" class="image">
-                <h2>@Model.Name</h2>
-                <h6>@Model.Ingredients</h6>
-               
-                @if (@Model.Price == "Временно недоступно")
-                {
-                <div class="price">@Model.Price </div>
-                }
-                else
-                {
-                <div class="price">@Model.Price₽ </div>
-                }
-            </div>
+        <div class="itemDetail">
+            <img src="@(Url.Content("~/images/" + Model.Image))" class="imageDetail" alt="@Model.Name" />
+            <h2>@Model.Name</h2>
+            <h6>@Model.Ingredients</h6>
+
+            @if (Model.Price == "Временно недоступно")
+            {
+                <div class="price">@Model.Price</div>
+            }
+            else
+            {
+                <div class="price">@Model.Price₽</div>
+            }
+        </div>
     </div>
 </body>
 </html>
