--- a/TestTaskTwo/wwwroot/css/site.css
+++ b/TestTaskTwo/wwwroot/css/site.css
@@ -46,3 +46,50 @@ body {
     max-width: 100%; /* Ограничиваем ширину изображения */
     height: auto; /* Автоматическая высота для сохранения пропорций */
 }
+
+/*Страница Detail*/
+.itemDetail {
+    box-sizing: border-box;
+    width: 100%;
+    max-width: 600px;
+    margin: 20px auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    border: 3px solid #808080;
+    background-color: #fff;
+    min-height: 550px;
+    color: #000;
+    padding: 20px;
+    border-radius: 25px;
+    position: relative;
+    overflow: hidden;
+}
+
+.itemDetail h2 {
+    text-align: left;
+    font-size: 40px;
+}
+
+.itemDetail h6 {
+    text-align: left;
+    font-size: 20px;
+    font-weight: 400;
+    max-width: 90%;
+    margin-bottom: 100px;
+}
+.imageDetail {
+    width: 100%;
+    max-width: 600px;
+    height: auto;
+    border-radius: 10px;
+    object-fit: cover;
+    display: block;
+}
+.name_Link {
+    font-size: 32px;
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
