--- a/TestTaskTwo/Views/Home/Privacy.cshtml
+++ b/TestTaskTwo/Views/Home/Privacy.cshtml
@@ -33,8 +33,11 @@
             var priceHtml = (p.price === "Временно недоступно") ? p.price : (p.price + '₽');
 
               var html = '<div class="item">'
-                     + '<img src="' + imageSrc + '" class="image"/>'
-                     +'<a class ="name_Link" href="'+ link +"/"+ id+'">'+'<h2>' + name + '</h2>'+'</a>'
+                     + '<img src="' + imageSrc + '"'
+                     + ' class="image"'
+                     + ' data-id="' + id + '"'
+                     + ' data-detail-url="' + link + '/' + id + '"'
+                     + '<a class ="name_Link" href="'+ link + '/' + id+'">'+'<h2>' + name + '</h2>'+'</a>'
                      + '<h6>' + ingredients + '</h6>'
                      + '<div class="price">' + priceHtml + '</div>'
                      + '</div>';
@@ -42,5 +45,23 @@
                 }
               })
     </script>
+
+    <script>
+        $(function() {
+          $('.my-flex-container').on('click', '.image', function (e) {
+
+            var $img = $(this);
+            var url = $img.data('detail-url');
+
+            if (!url) {
+              var id = $img.data('id');
+              if (id === undefined) return;
+              url = '/Home/Detail/' + id;
+            }
+            location.href = url;
+          });
+        });
+    </script>
+
 </body>
 </html>
