--- a/TestTaskTwo/wwwroot/css/site.css
+++ b/TestTaskTwo/wwwroot/css/site.css
@@ -43,6 +43,8 @@ body {
 }
 
 .image {
+    cursor: pointer;
+    outline: none;
     max-width: 100%; /* Ограничиваем ширину изображения */
     height: auto; /* Автоматическая высота для сохранения пропорций */
 }
