--- a/TestTaskTwo/Views/Home/IndexNew.cshtml
+++ b/TestTaskTwo/Views/Home/IndexNew.cshtml
@@ -1,1 +1,101 @@
-﻿
+﻿@model IEnumerable<TestTaskTwo.Models.PizzaModel>
+<html lang="ru">
+<head>
+    <meta charset="utf-8">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
+</head>
+<body>
+    
+    <div class="Pizza"><h1>Пиццы</h1></div>
+    <div class="my-flex-container">
+        @foreach (var pizza in Model)
+        {
+            <div class="item">
+                <img src="@(Url.Content("~/images/" + pizza.Image))" class="image" data-id="@pizza.Id" data-detail-url="@Url.Action("Detail", "Home", new { id = pizza.Id })">
+                <h2 class="name_Link">@pizza.Name</h2>
+                <h6>@pizza.Ingredients</h6>
+                <!-- Тут вывод цены. Снова решил сделать типо исключение
+                    Я всё понимаю. Это же работает, почему нет?
+                    просто изначально в css не проработал это и решил пусть будет так -->
+                @if (pizza.Price == "Временно недоступно")
+                {
+                    <div class="price">@pizza.Price</div>
+                }
+                else
+                {
+                    <div class="price">@($"{pizza.Price}₽")</div>
+                }
+            </div>
+        }
+    </div>
+
+    <div class="modal fade" id="pizzaModal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title pizza-name" id="pizzaModalLabel"></h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+
+                <div class="modal-body d-flex">
+                    <img id="pizzaModalImg" src="" class="pizza-modal-img" >
+                    <div>
+                        <h6 id="pizzaModalIngredients" class="pizza-ingredients"></h6>
+                        <div id="pizzaModalPrice" class="pizza-price"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+   
+
+    <!-- клик по картинке -->
+    <script>
+        $(function() {
+          $('.my-flex-container').on('click', '.image', function (e) {
+
+            var $img = $(this);
+            var url = $img.data('detail-url');
+
+            if (!url) {
+              var id = $img.data('id');
+              if (id === undefined) return;
+              url = '/Home/Detail/' + id;
+
+            }
+            location.href = url;
+          });
+        });
+    </script>
+
+    <!-- клик по названию -->
+    <script>
+        $(function () {
+          $('.my-flex-container').on('click', '.name_Link', function (e) {
+
+            e.preventDefault();
+
+            var $item = $(this).closest('.item');
+            if (!$item.length) return;
+
+            var img = $item.find('img.image').attr('src') || '';
+            var name = $item.find('.name_Link').text().trim();
+            var ing = $item.find('h6').text().trim();
+            var price = $item.find('.price').text().trim();
+
+            $('#pizzaModalLabel').text(name);
+            $('#pizzaModalImg').attr('src', img);
+            $('#pizzaModalIngredients').text(ing);
+            $('#pizzaModalPrice').text(price);
+
+            var modalEl = document.getElementById('pizzaModal');
+            bootstrap.Modal.getOrCreateInstance(modalEl).show();
+          });
+        });
+    </script>
+    
+</body>
+</html>
